<resources>
    <string name="app_name">jsq</string>
    <string name="_123">123</string>
    <string name="Back">Back</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="mul">*</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sub">-</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="divide">/</string>
    <string name="left_b">(</string>
    <string name="right_b">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="squ">^2</string>
    <string name="cub">^3</string>
    <string name="log">log</string>
    <string name="tan">tan</string>
    <string name="chang_du">长度</string>
    <string name="ti_ji">体积</string>
    <string name="jin_zhi">进制</string>
    <string name="heng">横屏</string>
    <string name="zhuan_haun">转换</string>
    <string name="e">e</string>
    <string name="pi">Π</string>
    <string name="shu_ping">竖屏</string>
    <string name="help">汇率</string>
    <string-array name="chang_du">
        <item>千米</item>
        <item>米</item>
        <item>英寸</item>
        <item>英尺</item>
        <item>码</item>
    </string-array>
    <string-array name="ti_ji">
        <item>毫升</item>
        <item>立方厘米</item>
        <item>升</item>
        <item>立方米</item>
        <item>立方英寸</item>
    </string-array>
    <string-array name="jin_zhi">
        <item>二进制</item>
        <item>八进制</item>
        <item>十进制</item>
        <item>十六进制</item>
    </string-array>
</resources>