<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt"
        android:text=""
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/GridLayout1"
        app:layout_constraintTop_toTopOf="parent"/>
  </LinearLayout>
<GridLayout
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1.4"
    android:columnCount="4"
    android:rowCount="6"
    android:orientation="horizontal"
    android:alignmentMode="alignBounds"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <Button
        android:layout_row="5"
        android:layout_column="0"
        android:id="@+id/chang"
        android:text="@string/chang_du"
        android:onClick="onclickChang"/>
    <Button
        android:layout_row="5"
        android:layout_column="1"
        android:id="@+id/ti"
        android:text="@string/ti_ji"
        android:onClick="onclickTi"/>

    <Button
        android:layout_row="5"
        android:layout_column="2"
        android:id="@+id/jin"
        android:text="@string/jin_zhi"
        android:onClick="onclickJin"/>

    <Button
        android:layout_row="5"
        android:layout_column="3"
        android:id="@+id/hen"
        android:text="@string/heng"
        android:onClick="onclickheng"/>

    <Button
        android:layout_row="4"
        android:layout_column="0"
        android:id="@+id/percent"
        android:text="@string/percent"
        android:onClick="onclickPercent"/>
    <Button
        android:layout_row="4"
        android:layout_column="1"
        android:id="@+id/zero"
        android:text="@string/zero"
        android:onClick="onclickZero" />

    <Button
        android:layout_row="4"
        android:layout_column="2"
        android:id="@+id/point"
        android:text="@string/point"
        android:onClick="onclickPoint"/>

    <Button
        android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/one"
        android:text="@string/one"
        android:onClick="onclickOne"/>
    <Button
        android:layout_row="3"
        android:layout_column="1"
        android:id="@+id/two"
        android:text="@string/two"
        android:onClick="onclickTwo"/>

    <Button
        android:layout_row="3"
        android:layout_column="2"
        android:id="@+id/three"
        android:text="@string/three"
        android:onClick="onclickThree"/>

    <Button
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_vertical"
        android:layout_column="3"
        android:id="@+id/equals"
        android:text="@string/equals"
        android:onClick="onclickEquals"/>
    <Button
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/four"
        android:text="@string/four"
        android:onClick="onclickFour"/>
    <Button
        android:layout_row="2"
        android:layout_column="1"
        android:id="@+id/five"
        android:text="@string/five"
        android:onClick="onclickFive"/>

    <Button
        android:layout_row="2"
        android:layout_column="2"
        android:id="@+id/six"
        android:text="@string/six"
        android:onClick="onclickSix"/>

    <Button
        android:layout_row="2"
        android:layout_column="3"
        android:id="@+id/add"
        android:text="@string/add"
        android:onClick="onclickAdd"/>
    <Button
    android:layout_row="1"
    android:layout_column="0"
    android:id="@+id/seven"
    android:text="@string/seven"
        android:onClick="onclickSeven"/>
    <Button
        android:layout_row="1"
        android:layout_column="1"
        android:id="@+id/eight"
        android:text="@string/eight"
        android:onClick="onclickEight"/>

    <Button
        android:layout_row="1"
        android:layout_column="2"
        android:id="@+id/nine"
        android:text="@string/nine"
        android:onClick="onclickNine"/>

    <Button
        android:layout_row="1"
        android:layout_column="3"
        android:id="@+id/sub"
        android:text="@string/sub"
        android:onClick="onclickSub"/>
    <Button
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/clear"
        android:text="@string/clear"
        android:onClick="onclickClear"/>
    <Button
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/div"
        android:text="@string/divide"
        android:onClick="onclickDiv"/>

    <Button
        android:layout_row="0"
        android:layout_column="2"
        android:id="@+id/mul"
        android:text="@string/mul"
        android:onClick="onclickMul"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:onClick="onclickBack"
        android:text="@string/Back" />


</GridLayout>
</LinearLayout>